--- a/index.html
+++ b/index.html
@@ -134,6 +134,27 @@
 
         <div class="papers">
 
+          <div class="container">
+              <div class="paper">
+                  <h4 class="title">Cheap Thrills: the Price of Leisure and the Global Decline in Work Hours</h4>
+
+
+                  <ul>
+                      <li class="co-authors">with <a  target="_blank" href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
+                      <li class="after-title">
+                          <a data-toggle="collapse" href="#recreation_prices">(abstract)</a>
+                          <a target="_blank" href="files/papers/Recreation_prices/paper.pdf">(paper)</a>
+                      </li>
+                  </ul>
+
+                  <div class="panel panel-transparent">
+                      <div id="recreation_prices" class="panel-collapse collapse">
+                          <div class="panel-body">The real price of recreation goods and services has fallen dramatically over the last century. At the same time, hours per worker have also been on a steady decline. As recreation goods make leisure time more enjoyable, we investigate if the fall in their price has contributed to the decline in work hours. Using aggregate data from OECD countries, as well as disaggregated data from the United States, we provide evidence that the two are strongly related. To identify the effect of recreation prices on hours worked, we use variation in the bundle of recreational goods across demographic groups to instrument for the changing price of leisure faced by these groups over time. We then construct a macroeconomic model with general preferences that allows for trending relative prices and work hours along a balanced growth path. We estimate the model and find that a large part of the decline in hours worked can be explained by the declining price of leisure. In contrast, we find mixed evidence that higher wages contributed to the decline in hours worked over the last several decades.</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
 
           <div class="container">
               <div class="paper">
