--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                   <h4 class="title">The Union Threat</h4>
 
                   <ul>
-                      <li class="journal"><B>Review of Economic Studies</B>, forthcoming</li>
+                      <li class="journal"><B>Review of Economic Studies</B>,  Volume 87, Issue 6, November 2020, Pages 2859–2892</li>
                       <li class="after-title">
                           <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
                           <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
