--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
               <div class="paper">
                   <h4 class="title">Cascades and Fluctuations in an Economy with an Endogenous Production Network</h4>
                   <ul>
+                      <li class="journal">Revise and resubmit at the <B>Review of Economic Studies</B></li>
                       <li class="after-title">
                           <a data-toggle="collapse" href="#Network">(abstract)</a>
                           <a target="_blank" href="files/papers/Network/paper.pdf">(paper)</a>
