--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                         <ul>
                             <li><span class="glyphicon glyphicon-user"></span> <a class="cv" target="_blank" href="files/cv.pdf">Curriculum Vitae</a></li>
-                            <li><span class="glyphicon glyphicon-envelope"></span> <a class="email" target="_blank" href="mailto:mathtd@cornell.edu">mathtd@cornell.edu</a></li>
+                            <li><span class="glyphicon glyphicon-envelope"></span> <a class="email" target="_blank" href="mailto:mt763@cornell.edu">mt763@cornell.edu</a></li>
                             <li><span class="glyphicon glyphicon-globe"></span><a class="cv" target="_blank" href="https://goo.gl/maps/3RFiav3NueM2"> 480 Uris Hall, Cornell University, Ithaca NY 14853</a></li>
                         </ul>
                     </div>
