--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="col-md-1 hidden-sm hidden-xs">
                     </div>
                     <div class="col-md-4 col-sm-6 hidden-xs">
-                        <img class="photo" src="img/2671112_orig.png" alt="Photo" title="Photo">
+                        <img class="photo" src="img/Taschereau-Dumouchel.jpg" alt="Photo" title="Photo">
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="logo" src="img/cornell_logo.svg" alt="Cornell" title="Cornell University">
