--- a/index.html
+++ b/index.html
@@ -159,6 +159,30 @@
 
           <div class="container">
               <div class="paper">
+                  <h4 class="title">The Future of Labor: Automation and the Labor Share in the Second Machine Age</h4>
+
+
+                  <ul>
+                      <li class="co-authors">with <a  target="_blank" href="https://www.nber.org/people/hong_cheng">Hong Cheng</a>, <a  target="_blank" href="http://www.lukasz-drozd.com">Lukasz Drozd</a>, <a  target="_blank" href="https://www.nber.org/people/rahul_giri">Rahul Giri</a> and <a  target="_blank" href="https://www.junjiexia.com">Junjie Xia</a></li>
+                      <li class="after-title">
+                          <a data-toggle="collapse" href="#china_automation">(abstract)</a>
+                          <a target="_blank" href="files/papers/china_automation/paper.pdf">(paper)</a>
+                      </li>
+                  </ul>
+
+                  <div class="panel panel-transparent">
+                      <div id="china_automation" class="panel-collapse collapse">
+                          <div class="panel-body">We study the effect of modern automation on firm-level labor shares using a 2018 survey of 1618 manufacturing firms in China. We exploit geographic and industry variation built into the design of subsidies for automation paid under a vast government industrialization program, “Made In China 2025”, to construct an instrument for automation investment. We use a canonical CES framework of automation and develop a novel methodology to structurally estimate the elasticity of substitution between labor and automation capital among automating firms, which for our preferred specification is 3.8. We calibrate the model and show that the general equilibrium implications of this elasticity are consistent with the aggregate trends during our sample period.</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+
+
+
+          <div class="container">
+              <div class="paper">
                   <h4 class="title">Herding Cycles</h4>
 
 
@@ -249,51 +273,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">Learning to Coordinate Over the Business Cycles</h4>
-                    <ul>
-                        <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#LearnCoord">(abstract)</a>
-                            <a target="_blank" href="files/papers/Lerning to Coordinate/slides.pdf">(slides)</a>
-                        </li>
-                    </ul>
-
-                    <div class="panel panel-transparent">
-                        <div id="LearnCoord" class="panel-collapse collapse">
-                            <div class="panel-body">We study a class of dynamic global games where agents learn from both exogenous and endogenous sources of information. Because endogenous information sources (quantities, prices) aggregate private information in a non-linear fashion, the amount of information provided in each period varies with the outcome of the coordination game. We show that a particular type of information cascades arise in this context. The more similar are the actions taken by agents, the less informative are endogenous signals. As a result, the economy may display bubble-like behavior with exuberant periods of economic activity followed by brutal crashes; as well as slow recoveries from crises, as agents take time to learn the new fundamentals.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">Optimal Redistributive Policy in a Labor Market with Search and Endogenous Participation</h4>
-                    <ul>
-                        <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#collapse_OptimUnemp">(abstract)</a>
-                            <a target="_blank" href="files/papers/Labor tax/paper.pdf">(paper)</a>
-                        </li>
-                    </ul>
-
-                    <div class="panel panel-transparent">
-                        <div id="collapse_OptimUnemp" class="panel-collapse collapse">
-                            <div class="panel-body">We study optimal redistributive policies in a frictional model of the labor market. Ex-ante heterogeneous agents choose how much to search in a labor market characterized by a matching technology. We first derive efficiency results and provide policies to decentralize the optimal allocation. We then solve the mechanism design problem of a government with redistributive motives and limited information about agents. A large emphasis is put on the general equilibrium effects of policies on wages and job creation. We show that the optimal policy can be implemented by a non-linear income tax on workers along with an unemployment insurance program. We calibrate our model to the US economy and characterize the welfare gains from the optimal policy and its effects on output, search, wages and unemployment distribution. Our findings suggest that optimal policies often feature a generous unemployment insurance along a negative income tax that efficiently raises the participation and employment of low-income earners.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
         <a class="anchor" id="publications"></a>
@@ -495,8 +474,56 @@
         </div>
 
 
+        <a class="anchor" id="working-papers"></a>
+        <div class="main_title">
+            <div class="container">
+                <h3>Hibernating Papers</h3>
+            </div>
+        </div>
 
 
+
+
+        <div class="container">
+            <div class="paper">
+                <h4 class="title">Learning to Coordinate Over the Business Cycles</h4>
+                <ul>
+                    <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
+                    <li class="after-title">
+                        <a data-toggle="collapse" href="#LearnCoord">(abstract)</a>
+                        <a target="_blank" href="files/papers/Lerning to Coordinate/slides.pdf">(slides)</a>
+                    </li>
+                </ul>
+
+                <div class="panel panel-transparent">
+                    <div id="LearnCoord" class="panel-collapse collapse">
+                        <div class="panel-body">We study a class of dynamic global games where agents learn from both exogenous and endogenous sources of information. Because endogenous information sources (quantities, prices) aggregate private information in a non-linear fashion, the amount of information provided in each period varies with the outcome of the coordination game. We show that a particular type of information cascades arise in this context. The more similar are the actions taken by agents, the less informative are endogenous signals. As a result, the economy may display bubble-like behavior with exuberant periods of economic activity followed by brutal crashes; as well as slow recoveries from crises, as agents take time to learn the new fundamentals.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="container">
+            <div class="paper">
+                <h4 class="title">Optimal Redistributive Policy in a Labor Market with Search and Endogenous Participation</h4>
+                <ul>
+                    <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
+                    <li class="after-title">
+                        <a data-toggle="collapse" href="#collapse_OptimUnemp">(abstract)</a>
+                        <a target="_blank" href="files/papers/Labor tax/paper.pdf">(paper)</a>
+                    </li>
+                </ul>
+
+                <div class="panel panel-transparent">
+                    <div id="collapse_OptimUnemp" class="panel-collapse collapse">
+                        <div class="panel-body">We study optimal redistributive policies in a frictional model of the labor market. Ex-ante heterogeneous agents choose how much to search in a labor market characterized by a matching technology. We first derive efficiency results and provide policies to decentralize the optimal allocation. We then solve the mechanism design problem of a government with redistributive motives and limited information about agents. A large emphasis is put on the general equilibrium effects of policies on wages and job creation. We show that the optimal policy can be implemented by a non-linear income tax on workers along with an unemployment insurance program. We calibrate our model to the US economy and characterize the welfare gains from the optimal policy and its effects on output, search, wages and unemployment distribution. Our findings suggest that optimal policies often feature a generous unemployment insurance along a negative income tax that efficiently raises the participation and employment of low-income earners.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
