--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
-                        <li class="journal"><B>Journal of Monetary Economics</B> (Carnegie-Rochester-NYU Series), Volume 97, August 2018, Pages 29–44</li>
+                        <li class="journal"><B>Journal of Monetary Economics</B>, Volume 97, August 2018, Pages 29–44</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#SRpainLRgain">(abstract)</a>
                             <a target="_blank" href="files/papers/SRpainLRgain/paper.pdf">(paper)</a>
