--- a/index.html
+++ b/index.html
@@ -358,8 +358,16 @@
                 <h3>Discussions</h3>
             </div>
         </div>
-
         <div class="papers">
+
+          <div class="container">
+              <div class="discussion">
+                  <h4 class="title">Optimal Monetary Policy in Production Networks</h4>
+                  <ul>
+                      <li class="co-authors">by Jennifer La’O and Alireza Tahbaz-Salehi, March 2021, <a target="_blank" href="files/discussions/2021_03_LaO_TahbazSalehi.pdf">(slides)</a></li>
+                  </ul>
+              </div>
+          </div>
 
           <div class="container">
               <div class="discussion">
