--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                   <div class="panel panel-transparent">
                       <div id="recreation_prices" class="panel-collapse collapse">
-                          <div class="panel-body">Abstract Recreation prices and hours worked have both fallen over the last century. We construct a macroeconomic model with general preferences that allows for trending recreation prices, wages, and work hours along a balanced-growth path. Estimating the model using aggregate data from OECD countries, we find that the fall in recreation prices can explain a large fraction of the decline in hours. We also use our model to show that the diverging prices of the recreation bundles consumed by different demographic groups can account for much of the increase in leisure inequality observed in the United States over the last decades.</div>
+                          <div class="panel-body">Recreation prices and hours worked have both fallen over the last century. We construct a macroeconomic model with general preferences that allows for trending recreation prices, wages, and work hours along a balanced-growth path. Estimating the model using aggregate data from OECD countries, we find that the fall in recreation prices can explain a large fraction of the decline in hours. We also use our model to show that the diverging prices of the recreation bundles consumed by different demographic groups can account for much of the increase in leisure inequality observed in the United States over the last decades.</div>
                       </div>
                   </div>
               </div>
