--- a/index.html
+++ b/index.html
@@ -359,6 +359,16 @@
 
           <div class="container">
               <div class="discussion">
+                  <h4 class="title">Switching-Track after the Great Recession</h4>
+                  <ul>
+                      <li class="co-authors">by Francesca Vinci and Omar Licandro, June 2021, <a target="_blank" href="files/discussions/2021_06_Vinci_Licandro.pdf">(slides)</a></li>
+                  </ul>
+              </div>
+          </div>
+
+
+          <div class="container">
+              <div class="discussion">
                   <h4 class="title">Optimal Monetary Policy in Production Networks</h4>
                   <ul>
                       <li class="co-authors">by Jennifer La’O and Alireza Tahbaz-Salehi, March 2021, <a target="_blank" href="files/discussions/2021_03_LaO_TahbazSalehi.pdf">(slides)</a></li>
