--- a/index.html
+++ b/index.html
@@ -134,6 +134,31 @@
 
         <div class="papers">
 
+
+
+          <div class="container">
+              <div class="paper">
+                  <h4 class="title">Herding Through Booms and Busts</h4>
+
+                  <ul>
+                      <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
+                      <li class="after-title">
+                          <a data-toggle="collapse" href="#HerdingCycles">(abstract)</a>
+                          <a target="_blank" href="files/papers/HerdingCycles/paper.pdf">(paper)</a>
+                          <a target="_blank" href="files/papers/HerdingCycles/slides.pdf">(slides)</a>
+                      </li>
+                  </ul>
+
+                  <div class="panel panel-transparent">
+                      <div id="HerdingCycles" class="panel-collapse collapse">
+                          <div class="panel-body">This paper explores whether rational herding can generate endogenous aggregate fluctuations. We embed a tractable model of rational herding into a business cycle framework. In the model, technological innovations arrive with unknown qualities and agents have dispersed information about how productive the technology really is. Rational investors decide whether to invest based on their private information and the investment behavior of others. Herd-driven boom-bust cycles arise endogenously in this environment when the technology is unproductive but investors' initial information is unusually optimistic. Their overoptimism leads to high investment rates, which investors mistakenly attribute to good fundamentals, leading to a self-reinforcing pattern of higher optimism and higher investment until the economy reaches a peak, followed by a crash when agents ultimately realize their mistake. We calibrate the model to the U.S. economy and show that it can explain boom-and-bust cycles in line with episodes like the dot-com bubble of the 1990s.</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+
+
           <div class="container">
               <div class="paper">
                   <h4 class="title">Cheap Thrills: the Price of Leisure and the Global Decline in Work Hours</h4>
@@ -179,26 +204,7 @@
           </div>
 
 
-          <div class="container">
-              <div class="paper">
-                  <h4 class="title">Herding Cycles</h4>
 
-                  <ul>
-                      <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
-                      <li class="after-title">
-                          <a data-toggle="collapse" href="#HerdingCycles">(abstract)</a>
-                          <a target="_blank" href="files/papers/HerdingCycles/paper.pdf">(paper)</a>
-                          <a target="_blank" href="files/papers/HerdingCycles/slides.pdf">(slides)</a>
-                      </li>
-                  </ul>
-
-                  <div class="panel panel-transparent">
-                      <div id="HerdingCycles" class="panel-collapse collapse">
-                          <div class="panel-body">This paper explores whether rational herding can generate endogenous business cycle fluctuations. We embed a tractable model of rational herding into a business-cycle framework. In the model, technological innovations arrive with unknown quality. New innovations are not immediately productive and agents have dispersed information about how productive the technology will be. Investors decide whether to invest in the technology or not based on their private information and the investment behavior of others. Herd-driven boom-bust cycles may arise endogenously in this environment out of a single impulse shock when the technology is unproductive but investors’ initial information is optimistic and highly correlated. When the technology appears, investors mistakenly attribute the high observed investment rates to high fundamentals, leading to a pattern of increasing optimism and investment until the economy reaches a peak, followed by a crash as agents ultimately realize their mistake. As such, the theory can shed light on bubble-like episodes in which excessive optimism about uncertain technology fueled general macroeconomic expansions that were followed by sudden recessions. We calibrate the model to the U.S. economy and show that the theory can explain boom-and-bust cycles in line with historical episodes like the Dot-Com Bubble of the late 1990s. Leaning-against-the-wind policies can be beneficial in this environment as they improve the diffusion of information over the cycle.</div>
-                      </div>
-                  </div>
-              </div>
-          </div>
 
 
 
