--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                       <li class="after-title">
                           <a data-toggle="collapse" href="#network_uncertainty">(abstract)</a>
                           <a target="_blank" href="files/papers/network_uncertainty/paper.pdf">(paper)</a>
+                          <a target="_blank" href="files/papers/network_uncertainty/slides.pdf">(slides)</a>
                       </li>
                   </ul>
 
