--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
           <div class="container">
               <div class="paper">
-                  <h4 class="title">Endogenous Production Networks under Uncertainty</h4>
+                  <h4 class="title">Endogenous Production Networks under Supply Chain Uncertainty</h4>
 
                   <ul>
                       <li class="co-authors">with <a  target="_blank" href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a>, <a target="_blank" href="https://economics.cornell.edu/bineet-mishra">Bineet Mishra</a> and <a  target="_blank" href="http://www.kris-nimark.net">Kristoffer Nimark</a></li>
@@ -150,7 +150,7 @@
 
                   <div class="panel panel-transparent">
                       <div id="network_uncertainty" class="panel-collapse collapse">
-                          <div class="panel-body">Supply chain disturbances can lead to important increases in production costs. When looking for new suppliers, firms therefore worry about the risks associated with potential trading partners. We investigate the impact of beliefs and uncertainty on the structure of the production network and, through that channel, on the level and volatility of macroeconomic aggregates. To do so, we construct a model of endogenous network formation in which uncertainty about future outcomes affects the structure of the production network. In the model, when uncertainty rises producers prefer to purchase from more stable suppliers, even though they might sell at higher prices. The resulting reorganization of the network leads to less macroeconomic volatility, but at the cost of a decline in aggregate output. We calibrate the model on U.S. data and find that the mechanism can account for a sizable decline in expected GDP during periods of high uncertainty like the Great Recession. </div>
+                          <div class="panel-body">Supply chain disturbances can lead to substantial increases in production costs. To mitigate these risks, firms may take steps to reduce their reliance on volatile suppliers. We construct a model of endogenous network formation to investigate how these decisions affect the structure of the production network and the level and volatility of macroeconomic aggregates. When uncertainty increases in the model, producers prefer to purchase from more stable suppliers, even though they might sell at higher prices. The resulting reorganization of the network leads to less macroeconomic volatility, but at the cost of a decline in aggregate output. The model also predicts that more productive and stable firms have higher Domar weights—a measure of their importance as suppliers—in the equilibrium network. We calibrate the model to U.S. data and find that the mechanism can account for a sizable decline in expected GDP during periods of high uncertainty like the Great Recession. </div>
                       </div>
                   </div>
               </div>
