--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="paper">
                     <h4 class="title">Cascades and Fluctuations in an Economy with an Endogenous Production Network</h4>
                     <ul>
-                        <li class="journal">Revise and resubmit at the <B>Review of Economic Studies</B></li>
+                        <li class="journal">Revise and resubmit, <B>Review of Economic Studies</B></li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#Network">(abstract)</a>
                             <a target="_blank" href="files/papers/Network/paper.pdf">(paper)</a>
@@ -164,7 +164,7 @@
 
                   <ul>
                       <li class="co-authors">with <a  target="_blank" href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a>, <a target="_blank" href="https://economics.cornell.edu/bineet-mishra">Bineet Mishra</a> and <a  target="_blank" href="http://www.kris-nimark.net">Kristoffer Nimark</a></li>
-                      <li class="journal">Revise and resubmit at <B>Econometrica</B></li>
+                      <li class="journal">Revise and resubmit, <B>Econometrica</B></li>
                       <li class="after-title">
                           <a data-toggle="collapse" href="#network_uncertainty">(abstract)</a>
                           <a target="_blank" href="files/papers/network_uncertainty/paper.pdf">(paper)</a>
@@ -190,7 +190,7 @@
 
                 <ul>
                     <li class="co-authors">with <a  target="_blank" href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
-                    <li class="journal">Revise and resubmit at <B>Journal of Political Economy Macroeconomics</B></li>
+                    <li class="journal">Revise and resubmit, <B>Journal of Political Economy Macroeconomics</B></li>
                     <li class="after-title">
                         <a data-toggle="collapse" href="#recreation_prices">(abstract)</a>
                         <a target="_blank" href="files/papers/Recreation_prices/paper.pdf">(paper)</a>
