--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 
                   <ul>
                       <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
+                      <li class="journal">Revise and resubmit, <B>Journal of Economic Theory</B></li>
                       <li class="after-title">
                           <a data-toggle="collapse" href="#HerdingCycles">(abstract)</a>
                           <a target="_blank" href="files/papers/HerdingCycles/paper.pdf">(paper)</a>
