--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <li>Robert Jain Faculty Fellow</li>
                         </ul>
                         <!-- <h3>Research Interests</h3> -->
-                        <span class="interests"><p>Macroeconomics, Labor Economics, Networks</p></span>
+                        <span class="interests"><p>Macroeconomics</p></span>
 
 
                         <ul>
