--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                           <a data-toggle="collapse" href="#network_uncertainty">(abstract)</a>
                           <a target="_blank" href="files/papers/network_uncertainty/paper.pdf">(paper)</a>
                           <a target="_blank" href="files/papers/network_uncertainty/slides.pdf">(slides)</a>
+                          <a target="_blank" href="files/papers/network_uncertainty/slides_short.pdf">(slides short)</a>
                       </li>
                   </ul>
 
