--- a/index.html
+++ b/index.html
@@ -344,10 +344,11 @@
 
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="https://sites.google.com/view/alexandrkopytov/">Alexandr Kopytov</a> and <a  target="_blank" href="http://finance.wharton.upenn.edu/~nroussan/">Nikolai Roussanov</a></li>
-                        <li class="journal"><B>Journal of Monetary Economics</B>, Volume 97, August 2018, Pages 29–44</li>
+                        <li class="journal"><B>Journal of Monetary Economics</B>, Carnegie-Rochester-NYU Conference Series, Volume 97, August 2018, Pages 29–44</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#SRpainLRgain">(abstract)</a>
                             <a target="_blank" href="files/papers/SRpainLRgain/paper.pdf">(paper)</a>
+                            <a target="_blank" href="https://knowledge.wharton.upenn.edu/article/recessions-jobs/">(Knowledge@Wharton)</a>
                         </li>
                     </ul>
 
@@ -370,6 +371,7 @@
                             <a data-toggle="collapse" href="#collapse_UT">(abstract)</a>
                             <a target="_blank" href="files/papers/Uncertainty Traps/paper.pdf">(paper)</a>
                             <a target="_blank" href="https://julia.quantecon.org/multi_agent_models/uncertainty_traps.html">(exercise at quant econ)</a>
+                            <a target="_blank" href="https://knowledge.wharton.upenn.edu/article/uncertainty-traps-lack-information-can-paralyze-economy/">(Knowledge@Wharton)</a>
                         </li>
                     </ul>
 
