--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
 
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KHNX833');</script>
+    <!-- End Google Tag Manager -->
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LKVBCYKVZ2"></script>
 <script>
@@ -397,6 +405,16 @@
             </div>
         </div>
         <div class="papers">
+
+            <div class="container">
+                <div class="discussion">
+                    <h4 class="title">A Theory of Payments-Chain Crises</h4>
+                    <ul>
+                        <li class="co-authors">by Saki Bigio, April 2023, <a target="_blank" href="files/discussions/2023_04_Bigio.pdf">(slides)</a></li>
+                    </ul>
+                </div>
+            </div>
+
 
           <div class="container">
               <div class="discussion">
